[package]
name = "deno-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.196.0"
serde = { version = "1.0.179", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
