[package]
name = "v8-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
colored = "2.0.4"
reqwest = { version = "0.11.18", features = ["rustls-tls", "blocking"] }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
serde_v8 = "0.106.0"
v8 = "0.74.2"
