[package]
name = "v8-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre.workspace = true
tokio.workspace = true
futures = "0.3.28"
#rustc-hash = "1.1.0"
v8-engine = { path = "v8-engine" }

[workspace]
members = [
    "v8-engine",
]

[workspace.dependencies]
color-eyre = { version = "0.6.2" }
tokio = { version = "1.29.1", features = ["full"] }

#comment out to improve build size
#[profile.release]
#strip = true
#opt-level = "s"
#lto = true
#codegen-units = 1
