[package]
name = "wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "1.29.1", features = ["sync", "macros", "io-util", "rt", "time"] }
tokio_wasi = { version = "1.25.2", features = ["full"] }
